--- a/demo/demo/build.gradle
+++ b/demo/demo/build.gradle
@@ -29,8 +29,15 @@ dependencies {
 	// Swagger
 	implementation 'io.springfox:springfox-boot-starter:3.0.0'
 
+	implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:2.1.2'
+
+
+
 
 }
+
+
+
 
 
 tasks.named('test') {
